deployment/namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: web
  labels:
    name: web
---
kind: Namespace
apiVersion: v1
metadata:
  name: api
  labels:
    name: api
---
kind: Namespace
apiVersion: v1
metadata:
  name: nginx
  labels:
    name: nginx
    openservicemesh.io/monitored-by: osm
