deployment/deployment-user-java.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-java-deployment
  namespace: api
  labels:
    app: tripinsights-user-java

spec:
  replicas: 3
  selector:
    matchLabels:
      app: tripinsights-user-java
  template:
    metadata:
      labels:
        app: tripinsights-user-java
    spec:
      containers:
      - name: tripinsights-user-java
        image: cropenhackcontainers2.azurecr.io/tripinsights/user-java:1.0
        imagePullPolicy: Always
        ports:
          - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
        volumeMounts:
        - mountPath: /mnt/secrets-store
          name: secrets-store01-inline
          readOnly: true
      volumes:
      - csi:
          driver: secrets-store.csi.k8s.io
          readOnly: true
          volumeAttributes:
            secretProviderClass: azure-kvname-user-msi
        name: secrets-store01-inline              
---
apiVersion: v1
kind: Service
metadata:
  name: user-java-service
  namespace: api
spec:
  selector:
    app: tripinsights-user-java
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
