deployment/deployment-userprofile.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userprofile-deployment
  namespace: api
  labels:
    app: tripinsights-userprofile

spec:
  replicas: 3
  selector:
    matchLabels:
      app: tripinsights-userprofile
  template:
    metadata:
      labels:
        app: tripinsights-userprofile
    spec:
      containers:
      - name: tripinsights-userprofile
        image: cropenhackcontainers2.azurecr.io/tripinsights/userprofile:1.0
        imagePullPolicy: Always
        ports:
          - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 250m
            memory: 256Mi
---
apiVersion: v1
kind: Service
metadata:
  name: userprofile-service
  namespace: api
spec:
  selector:
    app: tripinsights-userprofile
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
